--- a/_includes/accordian.html
+++ b/_includes/accordian.html
@@ -156,11 +156,11 @@
         </div>
         <div class="card">
           <div class="card-header" id="headingThree">
-            <h5 class="mb-0">
-              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Collapsible Group Item #3
+            <h2 id="personal-trainers" name="personal-trainers" class="mb-0 main-heading">
+              <button id="plusButton3" class="btn btn-link collapsed buttons__btn-link-custom" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <span id="plusMinus3" class="buttons__blue-plus">+</span>&#160;Testimonials
               </button>
-            </h5>
+            </h2>
           </div>
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
             <div class="card-body">
