--- a/assets/scss/5-pages/facilities/_facilities.scss
+++ b/assets/scss/5-pages/facilities/_facilities.scss
@@ -27,3 +27,10 @@
     margin-bottom: 0;
   }
 }
+
+.staff-img {
+  border-color: $white;
+  border-style: solid;
+  border-width: 5px;
+  width: 200px;
+}
