Remove <p> tags from within <li> tags

--- a/_includes/accordian.html
+++ b/_includes/accordian.html
@@ -80,12 +80,8 @@
               <h4 class="blue-heading-small">Student Options</h4>
               <p>KCC students can choose to:</p>
               <ul>
-                  <li>
-                      <p>sign up as a member</p>
-                  </li>
-                  <li>
-                      <p>enroll in the fitness center course and earn college credit</p>
-                  </li>
+                  <li>sign up as a member</li>
+                  <li>enroll in the fitness center course and earn college credit</li>
               </ul>
               <table class="mv-Table-6" cellspacing="0" cellpadding="3" bordercolor="#808080" border="1">
                   <tbody>
