--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,6 +7,7 @@
 @import '1-base/links';
 @import '1-base/tables';
 @import '1-base/buttons';
+@import '1-base/lists';
 
 // Modular components
 @import '3-modules/mega-nav';
