--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,13 @@
 {% include head.html %}
   <body data-sn="{{ page.sport }}" id="page-top" class="landing">
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KRL8533"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  {% include scripts/tagmanager.html %}
   <!-- End Google Tag Manager (noscript) -->
-  {% include facebook-widget.html %}
+  {% include scripts/facebook-widget.html %}
   {% include global-nav.html %}
   {% include mega-nav.html %}
   {{ content }}
   {% include footer.html %}
-  {% include vendor-scripts.html %}
-  {% include custom-script.html %}
+  {% include scripts/vendor-scripts.html %}
+  {% include scripts/custom-script.html %}
 {% include foot.html %}
