--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -4,13 +4,12 @@ baseurl: "../../"
 {% include head.html %}
   <body id="page-top" class="page">
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KRL8533"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  {% include scripts/tagmanager.html %}
   <!-- End Google Tag Manager (noscript) -->
   {% include global-nav.html %}
   {% include mega-nav.html %}
   {{ content }}
   {% include footer.html %}
-  {% include vendor-scripts.html %}
-  {% include custom-script.html %}
+  {% include scripts/vendor-scripts.html %}
+  {% include scripts/custom-script.html %}
 {% include foot.html %}
