--- a/_layouts/schedule-page.html
+++ b/_layouts/schedule-page.html
@@ -1,17 +1,14 @@
 {% include head.html %}
   <body data-sn="{{ page.sport }}" id="page-top" class="page">
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KRL8533"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  {% include scripts/tagmanager.html %}
   <!-- End Google Tag Manager (noscript) -->
   {% include global-nav.html %}
   {% include mega-nav.html %}
   {% include sub-nav.html %}
   {{ content }}
   {% include footer.html %}
-  {% include vendor-scripts.html %}
-  {% include schedule-page-script.html %}
-  <script src="{{page.baseurl}}assets/js/lazyLoadOnly.js"></script>
-  <script src="{{page.baseurl}}assets/js/stickyTableHeader.js"></script>
-  <script src="{{page.baseurl}}assets/js/stickyTableCustom.js"></script>
+  {% include scripts/vendor-scripts.html %}
+  {% include scripts/schedule-page-script.html %}
+  {% include scripts/lazy-load-only.html %}
 {% include foot.html %}
